scripts/nullness/original/urlaf0069908d_AlexanderAndreev_Parking_tgz-pJ8-com_andreev_parking_controller_RunnerJ8.txt
../original/urlaf0069908d_AlexanderAndreev_Parking_tgz-pJ8-com_andreev_parking_controller_RunnerJ8/src/com/andreev/parking/model/Parking.java:10: error: [initialization.fields.uninitialized] the constructor does not initialize fields: placePool
	public Parking() {
	       ^
../original/urlaf0069908d_AlexanderAndreev_Parking_tgz-pJ8-com_andreev_parking_controller_RunnerJ8/src/com/andreev/parking/model/ParkingPlacePool.java:58: error: [return] incompatible types in return.
		return place;
		       ^
  type of expression: @FBCBottom @Nullable ParkingPlace
  method return type: @Initialized @NonNull ParkingPlace
../original/urlaf0069908d_AlexanderAndreev_Parking_tgz-pJ8-com_andreev_parking_controller_RunnerJ8/src/com/andreev/parking/model/Car.java:17: error: [initialization.fields.uninitialized] the constructor does not initialize fields: parkings
	public Car() {
	       ^
../original/urlaf0069908d_AlexanderAndreev_Parking_tgz-pJ8-com_andreev_parking_controller_RunnerJ8/src/com/andreev/parking/model/CopyOfParkingPlacePool.java:47: error: [return] incompatible types in return.
			return place;
			       ^
  type of expression: @Initialized @Nullable ParkingPlace
  method return type: @Initialized @NonNull ParkingPlace
4 errors
